# GitResultsManager

./: .gitignore  CHANGES.txt  GitResultsManager.py  README  README.md  git-recreate  gitresman  grmtd  pyproject.toml  resman  setup.py
GitResultsManager/: GitResultsManager.py  __init__.py
doc/: pypi.md
examples/: Makefile  demo-GRM-module.py  demo-c.cc  demo-python-with-flush.py  demo-python.py  random-sleeper.py  random-snoozer.py  reliable-snoozer.py  sleeper.py  snoozer.py
gitresultsmanager/: GitResultsManager.py  __init__.py
src/GitResultsManager/: GitResultsManager.py  __init__.py  resman_script.py  resman_td_script.py
